--- a/glaciesIndiciumDiscordBot/package.json
+++ b/glaciesIndiciumDiscordBot/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "discord.js": "^11.1.0",
-    "request": "2.81.0"
+    "request": "2.81.0",
+    "snoowrap": "^1.22.0"
   }
 }
