--- a/glaciesIndiciumDiscordBot/package.json
+++ b/glaciesIndiciumDiscordBot/package.json
@@ -7,7 +7,8 @@
     "start": "node bot.js"
   },
   "dependencies": {
-    "discord.js": "^11.1.0",
+    "discord.js": "^12.2.0",
+    "node-fetch": "^2.6.1",
     "request": "2.81.0",
     "snoowrap": "^1.22.0"
   }
